--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\oneTry\\black.js"
+            "program": "${workspaceFolder}\\code\\js\\手写Promise全家桶\\Generator.js"
         }
     ]
 }
