--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\code2-3\\09二分查找.js"
+            "program": "${workspaceFolder}\\code2-3\\23convert.js"
         }
     ]
 }
